try to avoid crash on session save due to still existing main windows after document manager destruction

I can not really reproduce the crash, therefore: if it still happens,
please reopen

BUG: 378085